trying database connection

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-dev": "nodemon app.js",
     "install-deps": "npm install",
     "build": "echo 'No build step needed'",
-	"reg": "npm config set registry https://registry.npmjs.org/"
+    "reg": "npm config set registry https://registry.npmjs.org/"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql2": "^3.11.4"
   }
 }
