--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.5.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16"
   }
